[FIX]Fixed endpoints and bugs
