# app/apis/main.py
@@ -1,7 +1,7 @@
 from fastapi import APIRouter
 from app.apis.routes import participant_routes, lottery_routes, ballot_routes, winner_ballots_routes
 
-main_router = APIRouter(prefix="/lottery/v1", tags=["lottery"])
+main_router = APIRouter(prefix="/api/v1", tags=["lottery"])
 
 #Adding routes to Main Router
 main_router.include_router(participant_routes.router)
