# app/schemas/ballots.py
@@ -17,7 +17,7 @@ class BallotCreate(BallotBase):
     expiry_date: date = Field(None, example="2025-05-15", description="Date when this ballot expires. This field is optional.")
     model_config = ConfigDict(from_attributes=True)
 
-class BallotResponse(BallotBase):
+class BallotResponse(BaseModel):
     ballot_id: int = Field(..., description="Primary key of the ballot")
     user_id: int = Field(..., description="ID of the Participant who owns this ballot")
     lottery_id: int = Field(..., description="ID of the Lottery this ballot belongs to")
